<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>holoocean_bridge</name>
  <version>0.0.0</version>
  <description>HoloOcean conversion utilities for the CougUV</description>
  <maintainer email="snelsondurrant@gmail.com">snelsondurrant</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dvl_msgs</depend>
  <depend>holoocean_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>python3-pymap3d</depend>
  <depend>python3-scipy</depend>
  <depend>message_filters</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
