<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>holoocean_bridge</name>
  <version>0.0.0</version>
  <description>CoUGARs HoloOcean simulator bridge and message converters.</description>
  <maintainer email="snelsond@byu.edu">snelsondurrant</maintainer>
  <license>Apache-2.0</license>

  <depend>coug_interfaces</depend>
  <depend>dvl_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>holoocean_interfaces</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>python3-pymap3d</depend>
  <depend>python3-scipy</depend>
  <depend>rclpy</depend>
  <depend>seatrac_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
